--- a/index.html
+++ b/index.html
@@ -1,65 +1,74 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ranking de Celulares até R$1000</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      background: #f7f7f7;
-      text-align: center;
-    }
-    table {
-      margin: 1rem auto;
-      border-collapse: collapse;
-      width: 80%;
-      max-width: 600px;
-      background: #fff;
-      box-shadow: 0 0 10px #ccc;
-    }
-    th, td {
-      padding: 12px;
-      border: 1px solid #ddd;
-    }
-    th {
-      background-color: #333;
-      color: #fff;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ranking Celulares até R$1000</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color: #4CAF50;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-  <h1>Ranking: Melhores Celulares até R$1000</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>Posição</th>
-        <th>Modelo</th>
-      </tr>
-    </thead>
-    <tbody id="ranking-body">
-      <tr><td colspan="2">Carregando...</td></tr>
-    </tbody>
-  </table>
-
-  <script>
-    fetch('https://ranking-celulares-api-6.onrender.com/ranking/celulares-ate-1000')
-      .then(res => res.json())
-      .then(data => {
-        const tbody = document.getElementById('ranking-body');
-        tbody.innerHTML = '';
-        data.ranking.forEach((modelo, index) => {
-          const row = `<tr>
-                        <td>${index + 1}º</td>
-                        <td>${modelo}</td>
-                      </tr>`;
-          tbody.innerHTML += row;
-        });
-      })
-      .catch(() => {
-        document.getElementById('ranking-body').innerHTML = '<tr><td colspan="2">Erro ao carregar dados.</td></tr>';
-      });
-  </script>
+    <h1>Melhores Celulares até R$1000</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Modelo</th>
+                <th>Características</th>
+                <th>Preço</th>
+                <th>Link</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Xiaomi Redmi Note 12</td>
+                <td>Câmera tripla de 50MP, Tela AMOLED de 120Hz, 128GB</td>
+                <td>R$979</td>
+                <td><a href="https://www.google.com/search?q=Smartphone+Xiaomi+Redmi+Note+12+128GB" target="_blank">Comprar</a></td>
+            </tr>
+            <tr>
+                <td>Samsung Galaxy A03</td>
+                <td>Câmera dupla de 48MP, 64GB</td>
+                <td>R$899</td>
+                <td><a href="https://www.google.com/search?q=Smartphone+Samsung+Galaxy+A03+64GB" target="_blank">Comprar</a></td>
+            </tr>
+            <tr>
+                <td>Motorola Moto E22</td>
+                <td>Tela de 6.5&quot; HD+, 64GB</td>
+                <td>R$999</td>
+                <td><a href="https://www.google.com/search?q=Smartphone+Motorola+Moto+E22" target="_blank">Comprar</a></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
